objects/vlocity_ins__ProductRequirement__c.object
<CustomObject>
    <description>Represents insurance product rules governing eligibility and requirements such as trailing documents.</description>
    <fields>
        <fullName>vlocity_ins__ApplicableObject__c</fullName>
        <label>Applicable Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Conditions__c</fullName>
        <label>Conditions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Instructions__c</fullName>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Requirements</relationshipLabel>
        <relationshipName>ProductRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateModelFieldAPIName__c</fullName>
        <formula>TEXT(vlocity_ins__StateModelVersionId__r.vlocity_ins__StateModelId__r.vlocity_ins__FieldAPIName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Model Field API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateModelId__c</fullName>
        <formula>vlocity_ins__StateModelVersionId__r.vlocity_ins__StateModelId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Model Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateModelVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity State Model Version</label>
        <referenceTo>vlocity_ins__VlocityStateModelVersion__c</referenceTo>
        <relationshipLabel>Product Requirements</relationshipLabel>
        <relationshipName>ProductRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateTransitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity State Transition</label>
        <referenceTo>vlocity_ins__VlocityStateTransition__c</referenceTo>
        <relationshipLabel>Product Requirements</relationshipLabel>
        <relationshipName>ProductRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateTransitionName__c</fullName>
        <formula>vlocity_ins__StateTransitionId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Transition Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ToStateName__c</fullName>
        <formula>vlocity_ins__StateTransitionId__r.vlocity_ins__To__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call-Out</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>DocuSign</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityActionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Action</label>
        <referenceTo>vlocity_ins__VlocityAction__c</referenceTo>
        <relationshipLabel>Product Requirements</relationshipLabel>
        <relationshipName>ProductRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Requirement</label>
    <nameField>
        <label>Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>